# Syllabus-Feedback-System

./: .env  README.md  check_data.py  check_stakeholders.py  main.py  pyproject.toml  reset_db.py  seed_questions.py  setup_database.sql  test_app.py
app/: auth.py  create_admin.py  database.py  main.py  models.py  seed_questions.py
app/routes/: admin.py  client.py
app/static/: script.js
app/templates/: 401.html  admin_dashboard.html  admin_login.html  categoryselection.html  index.html  thankyou.html
app/templates/feedbackForms/: alumnifeedback.html  externalfaculty.html  industryrep.html  internalfaculty.html  parentfeedback.html  studentfeedback.html
